added project build using Cmake

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,10 @@ jobs:
       with:
         cmake-version: '3.16.x'
     - name: Use cmake
-      run: cmake --version
+      run: |
+        cmake --version
+        mkdir Git_Action_Cmake_2_build
+        cd Git_Action_Cmake_2_build
+        cmake ../Git_Action_Cmake_2
+        cmake --build .
+        Git_Action_Cmake_2
