--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,8 @@ jobs:
         cd ..
         pwd
         ls
-        # mkdir Git_Action_Cmake_2_build
-        # cd Git_Action_Cmake_2_build
-        # cmake ../Git_Action_Cmake_2
-        # cmake --build .
-        # Git_Action_Cmake_2
-        cd /home/runner/work/Git_Action_Cmake_2/Git_Action_Cmake_2/
-        ls
+        mkdir Git_Action_Cmake_2_build
+        cd Git_Action_Cmake_2_build
+        cmake ../../Git_Action_Cmake_2
+        cmake --build .
+        Git_Action_Cmake_2
