--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,6 @@ jobs:
         ls
         mkdir Git_Action_Cmake_2_build
         cd Git_Action_Cmake_2_build
-        cmake ../../Git_Action_Cmake_2
+        cmake ../Git_Action_Cmake_2
         cmake --build .
         Git_Action_Cmake_2
