--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,13 +25,8 @@ jobs:
     - name: Use cmake
       run: |
         cmake --version
-        ls
-        pwd
-        cd ..
-        pwd
-        ls
         mkdir Git_Action_Cmake_2_build
         cd Git_Action_Cmake_2_build
-        cmake ../Git_Action_Cmake_2
+        cmake ./Git_Action_Cmake_2
         cmake --build .
         Git_Action_Cmake_2
