--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
         # Git_Action_Cmake_2
         # cmake --build .
         # Git_Action_Cmake_2
-        echo CMakeLists.txt
+        cat CMakeLists.txt
