--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Setup cmake
-      uses: jwlawson/actions-setup-cmake@v1.12, actions/checkout@v2
+      uses: actions/checkout@v2
       with:
         cmake-version: '3.16.x'
     - name: Use cmake
