--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,12 +16,9 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   example:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest'
     steps:
-    - name: Setup cmake
-      uses: actions/checkout@v2
-      with:
-        cmake-version: '3.16.x'
+    - uses: actions/checkout@v2
     - name: Use cmake
       run: |
         cmake --version
