--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,20 +15,26 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  example:
-    runs-on: ubuntu-latest'
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: actions/checkout@v2
-    - name: compile c file
-      run: |
-        # cmake --version
-        # mkdir Git_Action_Cmake_2_build
-        # cd Git_Action_Cmake_2_build
-        # cmake ../Git_Action_Cmake_2
-        # cmake --build .
-        # Git_Action_Cmake_2
-        # cmake --build .
-        # Git_Action_Cmake_2
-        # cat CMakeLists.txt
-        gcc test.cpp
-        ./a.out
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
+          echo this is another test application.
+          gcc test.cpp
+          ./a.out
+
