--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
           echo this is another test application.
+          cmake --version
           gcc test.cpp
           ./a.out
 
