--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,4 +53,5 @@ jobs:
           echo outside build
           ls
           pwd
+          /home/runner/work/Git_Action_Cmake_2/Git_Action_Cmake_2
 
